# lemurclaw

./: .gitignore
codex-rs/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs
codex-rs/lemurclaw/: Cargo.toml  build.rs
codex-rs/lemurclaw-gui/: Cargo.toml  build.rs
codex-rs/lemurclaw-gui/assets/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
codex-rs/lemurclaw-gui/assets/src/: main.tsx  styles.css  themes.ts  transport.test.ts  transport.ts
codex-rs/lemurclaw-gui/assets/src/__tests__/: build_smoke.test.ts
codex-rs/lemurclaw-gui/assets/src/app/: App.tsx  useConversation.ts
codex-rs/lemurclaw-gui/assets/src/app/__tests__/: App.test.tsx  useConversation.test.ts
codex-rs/lemurclaw-gui/assets/src/components/: ApprovalCard.tsx  Composer.tsx  DiffViewerModal.tsx  Modal.tsx  ModelPicker.tsx  Onboarding.tsx  Scrollback.tsx  Sidebar.tsx  ThemePicker.tsx  TopBar.tsx  TranscriptPager.tsx
codex-rs/lemurclaw-gui/assets/src/components/__tests__/: ApprovalCard.test.tsx  Composer.test.tsx  ComposerPopup.test.tsx  Modal.test.tsx  ModelPicker.test.tsx  Scrollback.test.tsx  ThemePicker.test.tsx
codex-rs/lemurclaw-gui/assets/src/components/cells/: CommandExecCell.tsx  FileChangeCell.tsx  HookCell.tsx  McpToolCell.tsx  PlanCell.tsx  ReasoningCell.tsx  WebSearchCell.tsx
codex-rs/lemurclaw-gui/assets/src/components/cells/__tests__/: CommandExecCell.test.tsx  FileChangeCell.test.tsx  ReasoningCell.test.tsx  WebSearchCell.test.tsx
codex-rs/lemurclaw-gui/assets/src/components/composer/: dispatch.ts  slashCommandTypes.ts  slashCommands.ts
codex-rs/lemurclaw-gui/assets/src/components/composer/__tests__/: dispatch.test.ts  slashCommands.test.ts
codex-rs/lemurclaw-gui/assets/src/components/settings/: ExperimentalPanel.tsx  HooksPanel.tsx  MemoriesPanel.tsx  ModelPanel.tsx  PermissionsPanel.tsx  PluginsPanel.tsx  SettingsForm.tsx  SettingsModal.tsx  SkillsPanel.tsx
codex-rs/lemurclaw-gui/assets/src/components/settings/__tests__/: AppsPanel.test.tsx  McpPanel.test.tsx  PluginsPanel.test.tsx  SettingsForm.test.tsx  SettingsModal.test.tsx  SkillsPanel.test.tsx
codex-rs/lemurclaw-gui/assets/src/components/sidebar/: AgentPanel.tsx  SessionPicker.tsx
codex-rs/lemurclaw-gui/assets/src/hooks/: useRequest.ts  useTheme.ts
codex-rs/lemurclaw-gui/assets/src/hooks/__tests__/: useRequest.test.ts  useThreadList.test.ts
codex-rs/lemurclaw-gui/assets/src/types/: guards.test.ts
codex-rs/lemurclaw-gui/assets/src/viewModel/: reducer.test.ts  reducer.ts  types.ts
codex-rs/lemurclaw-gui/src/: assets.rs  backend.rs  lib.rs
codex-rs/lemurclaw-gui/tests/: gui_smoke.rs
codex-rs/lemurclaw-transport/: Cargo.toml
codex-rs/lemurclaw-transport/src/: lib.rs
codex-rs/lemurclaw-webui/: Cargo.toml  build.rs
codex-rs/lemurclaw-webui/assets/: index.html  tsconfig.json  vite.config.ts
codex-rs/lemurclaw-webui/assets/src/: main.tsx  styles.css  transport.ts  transport.ws.test.ts
codex-rs/lemurclaw-webui/assets/src/__tests__/: setup.ts
codex-rs/lemurclaw-webui/assets/src/app/: App.tsx
codex-rs/lemurclaw-webui/assets/src/app/__tests__/: App.test.tsx
codex-rs/lemurclaw-webui/assets/src/components/: Composer.tsx  ComposerPopup.tsx  DiffText.tsx  SettingsListPicker.tsx  TextResponseModal.tsx  ThemePicker.tsx  TopBar.tsx
codex-rs/lemurclaw-webui/assets/src/components/__tests__/: ApprovalCard.test.tsx  Composer.test.tsx  DiffText.test.tsx  DiffViewerModal.test.tsx  ModelPicker.test.tsx  Onboarding.test.tsx  Scrollback.test.tsx  SettingsListPicker.test.tsx  ThemePicker.test.tsx  TranscriptPager.test.tsx
codex-rs/lemurclaw-webui/assets/src/components/cells/: AgentMessageCell.tsx  UserMessageCell.tsx
codex-rs/lemurclaw-webui/assets/src/components/composer/: slashCommandTypes.ts  slashCommands.ts
codex-rs/lemurclaw-webui/assets/src/components/settings/: AppsPanel.tsx  McpPanel.tsx  PluginsPanel.tsx
codex-rs/lemurclaw-webui/assets/src/hooks/: useThreadList.ts
codex-rs/lemurclaw-webui/assets/src/types/: guards.ts
codex-rs/lemurclaw-webui/assets/src/viewModel/: reducer.test.ts  reducer.ts  types.ts
codex-rs/lemurclaw-webui/src/: assets.rs  codex_glue.rs  lib.rs  server.rs
codex-rs/lemurclaw-webui/tests/: assets_smoke.rs
codex-rs/lemurclaw/src/: config.rs  lib.rs  main.rs
codex-rs/lemurclaw/tests/: tui_smoke.rs
squat/lemurclaw/: Cargo.toml  README.md
squat/lemurclaw/src/: lib.rs
xtask/: Cargo.toml  README.md
xtask/src/: forks.rs  main.rs  manifest.rs  rename.rs  source_rewrite.rs  verify.rs
(+42 files in other folders)
