[package]
name = "lemurclaw-xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit", "visit-mut", "extra-traits"] }
toml = "0.8"
walkdir = "2"
