[package]
name = "lemurclaw-transport"
version.workspace = true
edition.workspace = true
license = "MIT"

[lib]
name = "lemurclaw_transport"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-app-server-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
