[package]
name = "lemurclaw"
version.workspace = true
edition.workspace = true
license = "MIT"

[lib]
name = "lemurclaw"
path = "src/lib.rs"

[[bin]]
name = "lemurclaw"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
lemurclaw-transport = { workspace = true }
lemurclaw-gui = { workspace = true }
lemurclaw-webui = { workspace = true }
codex-tui = { workspace = true }
codex-arg0 = { workspace = true }
codex-config = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
